# todayidliketobe

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: args.rs  config.rs  git.rs  main.rs  ops.rs  ssh.rs
