[package]
name = "todayidliketobe"
description = "A simple git account switcher"
version = "0.1.1"
edition = "2024"
license = "WTFPL"
repository = "https://github.com/nonepork/todayidliketobe"
keywords = ["git", "account", "cli", "github"]

[[bin]]
name = "tilb"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
directories = "5.0"
regex = "1.11.2"
inquire = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.7"
log = { version = "0.4", features = ["max_level_off"] }
